Rename things and floobles to something easier to grok
